unpackaged/main/default/objects/User/fields/PSA_Group__c.field-meta.xml
<CustomField>
    <fullName>PSA_Group__c</fullName>
    <label>PSA Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>123 Insight</fullName>
            </value>
            <value>
                <fullName>Abas</fullName>
            </value>
            <value>
                <fullName>Abas Bulgaria</fullName>
            </value>
            <value>
                <fullName>Abas China</fullName>
            </value>
            <value>
                <fullName>Abas DE BI</fullName>
            </value>
            <value>
                <fullName>Abas DE Client Group East</fullName>
            </value>
            <value>
                <fullName>Abas DE Client Group North-Central</fullName>
            </value>
            <value>
                <fullName>Abas DE Client Group South</fullName>
            </value>
            <value>
                <fullName>Abas DE Client Group South-West</fullName>
            </value>
            <value>
                <fullName>Abas DE Cloud &amp; Technology Services</fullName>
            </value>
            <value>
                <fullName>Abas DE Cloud Onboarding Factory</fullName>
            </value>
            <value>
                <fullName>Abas DE Consulting FiCo</fullName>
            </value>
            <value>
                <fullName>Abas DE Consulting SCM &amp; MFG</fullName>
            </value>
            <value>
                <fullName>Abas DE Consulting SCM &amp; MFG 1</fullName>
            </value>
            <value>
                <fullName>Abas DE Consulting SCM &amp; MFG 2</fullName>
            </value>
            <value>
                <fullName>Abas DE Consulting SCM &amp; MFG 3</fullName>
            </value>
            <value>
                <fullName>Abas DE D2D Services</fullName>
            </value>
            <value>
                <fullName>Abas DE Demand</fullName>
            </value>
            <value>
                <fullName>Abas DE Development 1</fullName>
            </value>
            <value>
                <fullName>Abas DE Development 2</fullName>
            </value>
            <value>
                <fullName>Abas DE DMS</fullName>
            </value>
            <value>
                <fullName>Abas DE Education Services</fullName>
            </value>
            <value>
                <fullName>Abas DE Packaged Solutions</fullName>
            </value>
            <value>
                <fullName>Abas DE Presales Productised Services</fullName>
            </value>
            <value>
                <fullName>Abas DE Presales Professional Services</fullName>
            </value>
            <value>
                <fullName>Abas DE Project Management &amp; Solution Architecture</fullName>
            </value>
            <value>
                <fullName>Abas DE SOM</fullName>
            </value>
            <value>
                <fullName>Abas DE Subconsultants</fullName>
            </value>
            <value>
                <fullName>Abas DE Supply</fullName>
            </value>
            <value>
                <fullName>Abas DE Support &amp; D2D Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>