unpackaged/main/default/objects/User/fields/PSA_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>PSA_Group_ID__c</fullName>
    <label>PSA Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>