unpackaged/main/default/objects/User/fields/PSA_Region__c.field-meta.xml
<CustomField>
    <fullName>PSA_Region__c</fullName>
    <label>PSA Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>123 Insight</fullName>
            </value>
            <value>
                <fullName>Abas</fullName>
            </value>
            <value>
                <fullName>Abas Bulgaria</fullName>
            </value>
            <value>
                <fullName>Abas China</fullName>
            </value>
            <value>
                <fullName>Abas France &amp; Netherlands</fullName>
            </value>
            <value>
                <fullName>Abas Germany</fullName>
            </value>
            <value>
                <fullName>Abas Germany East</fullName>
            </value>
            <value>
                <fullName>Abas Germany North Central</fullName>
            </value>
            <value>
                <fullName>Abas Germany South</fullName>
            </value>
            <value>
                <fullName>Abas Germany South West</fullName>
            </value>
            <value>
                <fullName>Abas India</fullName>
            </value>
            <value>
                <fullName>Abas Poland</fullName>
            </value>
            <value>
                <fullName>Abas Spain</fullName>
            </value>
            <value>
                <fullName>Abas USA</fullName>
            </value>
            <value>
                <fullName>BM Group</fullName>
            </value>
            <value>
                <fullName>BPSC</fullName>
            </value>
            <value>
                <fullName>BPSC Projects</fullName>
            </value>
            <value>
                <fullName>BPSC Recurring PS</fullName>
            </value>
            <value>
                <fullName>Clipper</fullName>
            </value>
            <value>
                <fullName>CLP Projects</fullName>
            </value>
            <value>
                <fullName>CLP Recurring PS</fullName>
            </value>
            <value>
                <fullName>Cluster 1</fullName>
            </value>
            <value>
                <fullName>Cluster 2</fullName>
            </value>
            <value>
                <fullName>Fortee UK</fullName>
            </value>
            <value>
                <fullName>Forterro Global Region</fullName>
            </value>
            <value>
                <fullName>Helios</fullName>
            </value>
            <value>
                <fullName>HLS Projects</fullName>
            </value>
            <value>
                <fullName>HLS Recurring PS</fullName>
            </value>
            <value>
                <fullName>Jeeves</fullName>
            </value>
            <value>
                <fullName>JVS Managed Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>