unpackaged/main/default/objects/User/fields/PSA_Region_ID__c.field-meta.xml
<CustomField>
    <fullName>PSA_Region_ID__c</fullName>
    <label>PSA Region ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>